--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-numpy>=1.26.4
-pandas>=2.2.1
-scikit-learn>=1.4.1
-matplotlib>=3.8.3
-seaborn>=0.13.2
-jupyter>=1.0.0
-loguru>=0.7.2
-xgboost>=2.0.3
-toml>=0.10.2
-scipy>=1.12.0
-optuna>=3.5.0
-plotly>=5.19.0
-torch>=2.2.1
+numpy==2.2.0
+pandas==2.2.3
+scikit-learn==1.6.0
+matplotlib==3.8.3
+seaborn==0.13.2
+jupyter==1.0.0
+loguru==0.7.2
+xgboost==2.0.3
+toml==0.10.2
+scipy==1.13.0
+optuna==3.5.0
+plotly==5.19.0
+torch==2.2.1
+tomli==2.0.1
+tomli-w==1.0.0
