--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
   datascience:
     build: .
     volumes:
-      - .:/app/project
+      - .:/app
     environment:
-      - PYTHONPATH=/app/project
-    working_dir: /app/project
+      - PYTHONPATH=/app
+    working_dir: /app
     # Enable interactive mode
     stdin_open: true
     tty: true 
