--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,40 @@
-# Python cache files
+# Python
 __pycache__/
 *.py[cod]
-*.pyo
-*.pyd
-*.pyc
-
-# Virtual environment directories
-.env
-.venv/
-env/
-venv/
-
-# Distribution / packaging
+*$py.class
+*.so
 .Python
 build/
 develop-eggs/
 dist/
 downloads/
 eggs/
-lib/
+.eggs/
 lib64/
 parts/
 sdist/
 var/
 wheels/
 *.egg-info/
+.installed.cfg
 *.egg
 
-# Pytest cache
-.pytest_cache/
+# Testing
 .coverage
-.coverage.*
-.cache
-nosetests.xml
-test-results/
+coverage.xml
+.pytest_cache/
 
-# IDE and editor files
+# Environment
+.env
+.venv
+env/
+venv/
+ENV/
+
+# IDE
 .idea/
 .vscode/
 *.swp
-*.swo
-*.sublime-workspace
-*.sublime-project
-
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints
-
-# MacOS specific files
-.DS_Store
-
-# Other files
-*.log
-*.pot
-*.pyc
-*.pdb
-*.db
-*.sqlite3
 
 # project specific
 exp/adult/privsyn/adult.csv
