--- a/exp/abalone/fed_privsyn_adv/config_fed_adaptive.toml
+++ b/exp/abalone/fed_privsyn_adv/config_fed_adaptive.toml
@@ -6,23 +6,24 @@ raw_data = "./datasets/abalone/abalone.csv"
 train_data = "./datasets/abalone/train.csv"
 val_data = "./datasets/abalone/val.csv"
 test_data = "./datasets/abalone/test.csv"
-loss_record = "./exp/abalone/fed_privsyn_adaptive/loss.csv"
-out_model = "./exp/abalone/fed_privsyn_adaptive/fed_privsyn.pkl"
-out_data = "./exp/abalone/fed_privsyn_adaptive/abalone.csv"
-fidelity_result = "./exp/abalone/fed_privsyn_adaptive/fidelity_result.csv"
-fidelity_train_result = "./exp/abalone/fed_privsyn_adaptive/fidelity_train_result.csv"
-privacy_result = "./exp/abalone/fed_privsyn_adaptive/privacy_result.csv"
-utility_result = "./exp/abalone/fed_privsyn_adaptive/utility_result.csv"
+loss_record = "./exp/abalone/fed_privsyn_adv/loss.csv"
+out_model = "./exp/abalone/fed_privsyn_adv/fed_privsyn.pkl"
+out_data = "./exp/abalone/fed_privsyn_adv/abalone.csv"
+fidelity_result = "./exp/abalone/fed_privsyn_adv/fidelity_result.csv"
+fidelity_train_result = "./exp/abalone/fed_privsyn_adv/fidelity_train_result.csv"
+privacy_result = "./exp/abalone/fed_privsyn_adv/privacy_result.csv"
+utility_result = "./exp/abalone/fed_privsyn_adv/utility_result.csv"
 
 [model_params]
-epsilon = 5
+epsilon = 1
 delta = 1e-10
 max_bins = 100
 update_iterations = 50
 noise_to_one_way_marginal = 0.1
 noise_to_two_way_marginal = 0.1
 two-way-publish = 0.8
-client_num = 10
+client_num = 5
+disttype = "uniform"
 
 
 [sample_params]
