--- a/exp/insurance/fed_privsyn/config_fed.toml
+++ b/exp/insurance/fed_privsyn/config_fed.toml
@@ -23,7 +23,7 @@ noise_to_one_way_marginal = 0.1
 noise_to_two_way_marginal = 0.1
 two-way-publish = 0.8
 client_num = 5
-
+disttype = "uniform"
 
 [sample_params]
 num_samples = 0 # sample the same number of samples as the train+val data
