--- a/exp/adult/fed_privsyn/config_fed.toml
+++ b/exp/adult/fed_privsyn/config_fed.toml
@@ -15,14 +15,14 @@ privacy_result = "./exp/adult/fed_privsyn/privacy_result.csv"
 utility_result = "./exp/adult/fed_privsyn/utility_result.csv"
 
 [model_params]
-epsilon =  # privacy budget
+epsilon = 5 # privacy budget
 delta = 1e-10
 max_bins = 100
 update_iterations = 50
 noise_to_one_way_marginal = 0.1
 noise_to_two_way_marginal = 0.1
 two-way-publish = 0.8
-client_num = 5
+client_num = 25
 disttype = "uniform"
 
 
