--- a/exp/adult/fed_privsyn_adv/config_fed_adaptive.toml
+++ b/exp/adult/fed_privsyn_adv/config_fed_adaptive.toml
@@ -15,15 +15,15 @@ privacy_result = "./exp/adult/fed_privsyn_adv/privacy_result.csv"
 utility_result = "./exp/adult/fed_privsyn_adv/utility_result.csv"
 
 [model_params]
-epsilon = 1
+epsilon = 5
 delta = 1e-10
 max_bins = 100
 update_iterations = 50
-noise_to_one_way_marginal = 0.1
-noise_to_two_way_marginal = 0.1
-two-way-publish = 0.8
-client_num = 5
-disttype = "uniform"
+noise_to_one_way_marginal = 0.3
+noise_to_two_way_marginal = 0.3
+two-way-publish = 0.4
+client_num = 10
+disttype = "random"
 
 
 [sample_params]
