--- a/exp/adult/fed_privsyn_adv/config_fed_adaptive.toml
+++ b/exp/adult/fed_privsyn_adv/config_fed_adaptive.toml
@@ -22,8 +22,8 @@ update_iterations = 50
 noise_to_one_way_marginal = 0.3
 noise_to_two_way_marginal = 0.3
 two-way-publish = 0.4
-client_num = 10
-disttype = "random"
+client_num = 5
+disttype = "uniform"
 
 
 [sample_params]
